fix(ui): z-index edit pipeline ascode section (#5082)

--- a/ui/src/app/views/pipeline/show/ascode-editor/pipeline.ascode.editor.scss
+++ b/ui/src/app/views/pipeline/show/ascode-editor/pipeline.ascode.editor.scss
@@ -1,5 +1,5 @@
 .codebar {
-    z-index: unset;
+    z-index: 10; // to be over code mirror fields of action component
     &.visible {
         width: 50%;
     }
